# mini-livechat

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  SKILL.md  SKILLS.md  deploy-livechat.sh
client/: app.js  index.html
doc/: livechat_sdp_guide.md
src/: config.rs  core.rs  crypto.rs  error.rs  http.rs  lib.rs  main.rs  media.rs  net.rs  protocol.rs  reaper.rs  signaling.rs  trace.rs  utils.rs
src/core/: channel.rs  floor.rs  media_peer.rs  user.rs
src/http/: admin.rs  channel.rs  dto.rs  state.rs  trace.rs
src/media/: dtls.rs  net.rs  srtp.rs
src/protocol/: error_code.rs  floor.rs  message.rs  opcode.rs  protocol.rs  sdp.rs
tests/: core_test.rs  integration_test.rs
