[package]
name = "mini-livechat"
version = "0.1.0"
edition = "2021"
# author: kodeholic (powered by Claude)

[dependencies]
# 비동기 I/O 및 워커 스레드 관리
tokio = { version = "1", features = ["full"] }
# Zero-copy 기반 패킷 복사 오버헤드 최소화
bytes = "1"

# 현장 디버깅 및 트레이스 로깅 시스템
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 웹소켓 시그널링 및 JSON 처리 (다음 스텝을 위한 미리 세팅)
axum = { version = "0.8.8", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"

# SRTP 암복호화 — Phase 2에서 구현 예정 (현재 평문 패스스루)
# webrtc-srtp = "0.17"
# rcgen = "0.13"

# Phase 2 — ICE Lite + DTLS-SRTP
webrtc-sdp  = "0.3.13"
stun        = "0.17.1"
dtls        = "0.17.1"
webrtc-srtp = "0.17.1"
webrtc-util = "0.17.1"
sha2               = "0.10"
rustls-pki-types   = "1"
async-trait = "0.1"
rand        = "0.8"
clap        = { version = "4", features = ["derive"] }
reqwest     = { version = "0.12", features = ["json", "blocking"] }
tabled      = "0.17"
colored     = "2"
hmac        = "0.12"
sha-1       = "0.10"
crc32fast   = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
chrono       = { version = "0.4", features = ["clock"] }
tower-http   = { version = "0.6", features = ["cors"] }

[[bin]]
name = "lcserver"
path = "src/main.rs"

[[bin]]
name = "lcadmin"
path = "src/bin/admin.rs"

[[bin]]
name = "lctrace"
path = "src/bin/trace.rs"

[dev-dependencies]
# 통합 테스트용 WS 클라이언트
tokio-tungstenite = "0.26"
# 랜덤 포트 바인딩용
portpicker = "0.1"

[profile.release]
# 성능 영향: 클라우드 배포 시 LTO를 활성화하여 실행 속도를 극한으로 끌어올림
lto = true
codegen-units = 1
# OOM 등 치명적 에러 발생 시 즉각 프로세스 종료 (빠른 장애 격리 및 재시작 유도)
panic = "abort"